--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>
+		Hello Coursera!
+	</title>
+</head>
+
+<body>
+	<h1>Hello World</h1>
+</body>
+</html>
