--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Hello Coursera!
-	</title>
+	<meta charset="utf-8">
+	<title>Memento Vivere</title>
 </head>
 
 <body>
 	<h1>Hello World</h1>
+	
 </body>
 </html>
