styling for front page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
 	<meta charset="utf-8">
 	<title>Memento Vivere</title>
+	<link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/theme.css">
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<div id="mv-head">
+	<a href=""><span>Memento Vivere</span></a>
+	<div>
+	<a href="photography/index.html" target="_blank">Photography</a>
+	<a>Poetry</a>
+	</div>
+	</div>
 	
+	<div id="mv-home">
+		<img src="img/grand-teton.jpg" alt="Lake at Grand Teton National Park" >
+		<span>And did you get what
+		you wanted from this life, even so?<br>
+		I did.<br>
+		And what did you want?<br>
+		To call myself beloved, to feel myself<br>
+		beloved on the earth.</span>
+	</div>
+
+	<div id="icons">
+		<div class="left">
+			
+		</div>
+		<div class="center">
+		</div>
+		<div class="right">
+		</div>
+	</div>
+	
+	<div id="quote">
+		<span>“We have only a little time to please the living. But all eternity to love the dead.” 
+		<br>--- Antigone</span>
+	</div>
 </body>
 </html>
